--- a/_posts/0000-01-02-mjo-king.md
+++ b/_posts/0000-01-02-mjo-king.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to my newly added slide!"
 ---
-This is github mjo-king slide
+This is a new commit and new slide
 Use the left arrow to go back!
