--- a/_posts/0000-01-03-slide03.md
+++ b/_posts/0000-01-03-slide03.md
@@ -1,5 +1,5 @@
 ---
-layout: slide 03 Markdown Tables
+layout: slide 04 Markdown Emoji
 title: "Welcome to our third slide!"
 ---
 Your text
@@ -7,8 +7,4 @@ Use the left arrow to go back!
 
 ---
 
-| Tables        | Are           | Cool  |
-| ------------- |:-------------:| -----:|
-| col 3 is      | right-aligned | $1600 |
-| col 2 is      | centered      |   $12 |
-| zebra stripes | are neat      |    $1 |
+:hankey:
