Add a fifth slide

--- a/_posts/0000-01-05-slide.md
+++ b/_posts/0000-01-05-slide.md
@@ -1,5 +1,5 @@
 ---
-layout: slide 03 Markdown Emoji
+layout: slide 05 Markdown Tables
 title: "Welcome to our third slide!"
 ---
 Your text
@@ -7,4 +7,3 @@ Use the left arrow to go back!
 
 ---
 
-# :hankey: 
